kubernetes/overlays/eks/prod/recommendation/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject-secret-config: "secret/data/craftista/prod/recommendation/config"
    spec:
      containers:
        - name: recommendation
          image: 8060633493/craftista-recommendation:latest
