kubernetes/overlays/eks/prod/recommendation/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  template:
    spec:
      containers:
        - name: recommendation
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
