kubernetes/overlays/eks/prod/recommendation/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - recommendation.webdemoapp.com
      secretName: recommendation-prod-tls
  rules:
    - host: recommendation.webdemoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommendation
                port:
                  number: 8080
